쌩쌩몰 추가

--- a/index.html
+++ b/index.html
@@ -172,10 +172,11 @@
                                 <h2 class="num">1</h2>
                                 <div class="img_box">
                                     <div class="marquee">
-                                        <img src="images/2.png" alt="SAENGSAENG MALL 1" />
-                                        <img src="images/2.png" alt="SAENGSAENG MALL 2" />
-                                        <img src="images/2.png" alt="SAENGSAENG MALL 3" />
-                                        <img src="images/2.png" alt="SAENGSAENG MALL 4" />
+                                        <img src="images/쌩쌩몰_one.png" alt="SAENGSAENG MALL 1" />
+                                        <img src="images/쌩쌩몰_two.png" alt="SAENGSAENG MALL 2" />
+                                        <img src="images/쌩쌩몰_three.png" alt="SAENGSAENG MALL 3" />
+                                        <img src="images/쌩쌩몰_four.png" alt="SAENGSAENG MALL 4" />
+                                        <img src="images/쌩쌩몰_five.png" alt="SAENGSAENG MALL 5" />
                                         <!-- 필요한 만큼 이미지 추가 -->
                                     </div>
                                 </div>
@@ -185,10 +186,10 @@
                                 <h2 class="num">2</h2>
                                 <div class="img_box">
                                     <div class="marquee">
-                                        <img src="images/질레트.png" alt="GILLETTE 1" />
-                                        <img src="images/질레트.png" alt="GILLETTE 2" />
-                                        <img src="images/질레트.png" alt="GILLETTE 3" />
-                                        <img src="images/질레트.png" alt="GILLETTE 4" />
+                                        <img src="images/질레트_one.png" alt="GILLETTE 1" />
+                                        <img src="images/질레트_two.png" alt="GILLETTE 2" />
+                                        <img src="images/질레트_three.png" alt="GILLETTE 3" />
+                                        <img src="images/질레트_four.png" alt="GILLETTE 4" />
                                         <!-- 필요한 만큼 이미지 추가 -->
                                     </div>
                                 </div>
@@ -199,10 +200,10 @@
                                 <h2 class="num">3</h2>
                                 <div class="img_box">
                                     <div class="marquee">
-                                        <img src="images/모나미.png" alt="MONAMI 1" />
-                                        <img src="images/모나미.png" alt="MONAMI 2" />
-                                        <img src="images/모나미.png" alt="MONAMI 3" />
-                                        <img src="images/모나미.png" alt="MONAMI 4" />
+                                        <img src="images/모나미_zero.png" alt="MONAMI 1" />
+                                        <img src="images/모나미_one.png" alt="MONAMI 2" />
+                                        <img src="images/모나미_two.png" alt="MONAMI 3" />
+                                        <img src="images/모나미_three.png" alt="MONAMI 4" />
                                         <!-- 필요한 만큼 이미지 추가 -->
                                     </div>
                                 </div>
@@ -213,10 +214,12 @@
                                 <h2 class="num">4</h2>
                                 <div class="img_box">
                                     <div class="marquee">
-                                        <img src="images/오늘수거.png" alt="OUL SUGEO 1" />
-                                        <img src="images/오늘수거.png" alt="OUL SUGEO 2" />
-                                        <img src="images/오늘수거.png" alt="OUL SUGEO 3" />
-                                        <img src="images/오늘수거.png" alt="OUL SUGEO 4" />
+                                        <img src="images/오늘수거_zero.png" alt="OUL SUGEO 0" />
+                                        <img src="images/오늘수거2_one.png" alt="OUL SUGEO 2-1" />
+                                        <img src="images/오늘수거2_two.png" alt="OUL SUGEO 2-2" />
+                                        <img src="images/오늘수거2_three.png" alt="OUL SUGEO 2-3" />
+                                        <img src="images/오늘수거2_four.png" alt="OUL SUGEO 2-4" />
+                                        <img src="images/오늘수거2_five.png" alt="OUL SUGEO 2-5" />
                                         <!-- 필요한 만큼 이미지 추가 -->
                                     </div>
                                 </div>
@@ -229,23 +232,23 @@
                         <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="content">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <img src="img/쌩쌩몰_zero.png" loading="lazy" />
+                                    <img src="images/쌩쌩몰_one.png" loading="lazy" />
                                     <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/쌩쌩몰_one.png" loading="lazy" />
+                                    <img src="images/쌩쌩몰_two.png" loading="lazy" />
                                     <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/쌩쌩몰_two.png" loading="lazy" />
+                                    <img src="images/쌩쌩몰_three.png" loading="lazy" />
                                     <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/쌩쌩몰_three.png" loading="lazy" />
+                                    <img src="images/쌩쌩몰_four.png" loading="lazy" />
                                     <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <img src="img/쌩쌩몰_four.png" loading="lazy" />
+                                    <img src="images/쌩쌩몰_five.png" loading="lazy" />
                                     <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
                                 </div>
                             </div>
@@ -271,7 +274,7 @@
                         <div class="dpbox details">
                             <div class="flex"> <!-- 첫번째 -->
                                 <div class="box name"> 
-                                    <h3>SaengSaengMall Web</h3>
+                                    <h3>SsaengSsaengMall Web</h3>
                                 </div>
                                 <div class="box link">
                                     <a href="https://cxexxe.github.io/06_27/"><img src="images/link.png" alt="" >
@@ -286,7 +289,7 @@
                                 <div class="infoBox">
                                 <div class="company">
                                     <p>COMPANY</p>
-                                    <h4>MONAMI</h4>
+                                    <h4>NaturaLife</h4>
                                 </div>
                                 <div class="year">
                                     <p>YEAR</p>
